tests/rosetta/out/Rust/a+b.rs
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
fn _input() -> String {
    use std::io::{self, Read};
    let mut s = String::new();
    io::stdin().read_line(&mut s).unwrap();
    s.trim().to_string()
}

fn main() {
    let main = move || -> () {
        let a = int(_input());
        let b = int(_input());
        println!("{}", vec![format!("{}", a + b)].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
    };
    main();
}
